--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "saved.empty.title" = "No Saved Sniglets";
 "saved.empty.prompt" = "Fill your dictionary by saving generated sniglets and assign personal definitions to them.";
 "saved.detail.title" = "Dictionary Entry";
-"saved.button.add" = "Add to Dictionary";
+"saved.button.add" = "Save";
 "saved.alert.title" = "Sniglet Added To Dictionary";
 "saved.alert.detail" = "You can go to Dictionary to view the word and add a custom definition.";
 
