:sparkles: Update SafariView, Add Privacy Policy link
The actionable items in the app information section in Settings
now contains a link that opens the app's privacy policy page in
Safari.

Additionally, SafariView now has two modifiers that represent the
configuration settings for SFSafariViewController, making it easy
to configure the controller with view modifiers.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -48,6 +48,7 @@
 "settings.info.header" = "About This App";
 "settings.info.version" = "App Version";
 "settings.info.feedback" = "Send Feedback";
+"settings.info.privacy" = "View Privacy Policy";
 "settings.info.source" = "View Source Code";
 "settings.info.footer" = "Developed by Marquis Kurt with ❤️";
 
