:sparkles: Add image saving feature
This commit implements a feature where saved sniglets can be shared
as a picture to friends and family.

^ABY-7 work Development 4h stage Review

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 // MARK: - SAVED WORDS
 "saved.title" = "Dictionary";
 "saved.title.long" = "Your Dictionary";
+"saved.select.prompt" = "No Sniglet Selected";
 "saved.empty.title" = "No Saved Sniglets";
 "saved.empty.prompt" = "Fill your dictionary by saving generated sniglets and assign personal definitions to them.";
 "saved.detail.title" = "Dictionary Entry";
