--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -28,6 +28,9 @@
 "saved.alert.title" = "Sniglet Added To Dictionary";
 "saved.alert.detail" = "You can go to Dictionary to view the word and add a custom definition.";
 
+// MARK: - SOUND
+"sound.button.prompt" = "Speak Sniglet";
+
 // MARK: - SETTINGS
 "settings.title" = "Settings";
 "settings.general.title" = "General";
