--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "generator.button.prompt" = "Give me a sniglet!";
 "generator.button.help" = "What's this?";
 "generator.copy.prompt" = "Tap the word to copy it to your clipboard.";
+"generator.copy.button" = "Copy";
 
 "generator.explain.title" = "Confidence Score";
 "generator.explain.detail" = "Generated sniglets are compared against a machine learning algorithm that detects whether or not a word is likely to exist in a given language. This algorithm has been trained on English and Japanese words and returns a percentage that represents how likely it is for the generated sniglet to be a real word (or wordlike).";
@@ -25,6 +26,7 @@
 "saved.empty.prompt" = "Fill your dictionary by saving generated sniglets and assign personal definitions to them.";
 "saved.detail.title" = "Dictionary Entry";
 "saved.button.add" = "Save";
+"saved.button.share" = "Share";
 "saved.alert.title" = "Sniglet Added To Dictionary";
 "saved.alert.detail" = "You can go to Dictionary to view the word and add a custom definition.";
 
@@ -55,6 +57,8 @@
 "settings.info.privacy" = "View Privacy Policy";
 "settings.info.source" = "View Source Code";
 "settings.info.footer" = "Developed by Marquis Kurt with ❤️";
+
+"settings.reset.title" = "Reset Dialogs and Warnings";
 
 "settings.syllable.title" = "Syllable Shapes";
 "settings.syllable.add" = "Add";
