--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-// MARK: - GENERATOR
+// MARK: - Generator
 "generator.title" = "Generator";
 "generator.button.prompt" = "Give me a sniglet!";
 "generator.button.help" = "What's this?";
@@ -18,7 +18,7 @@
 "generator.explain.detail2" = "The sniglet is broken up into its individual letters and fed into the algorithm. If the sniglet is less than eight characters, asterisks are added as padding. The model will try to predict its validity as best as it can. The system will return a random sniglet from the batch that was successful in its prediction.";
 "generator.explain.detail3" = "The confidence score should be considered when using the sniglet, but is not a definitive answer. You can go to Settings to fine-tune these parameters including boundaries and batch sizes.";
 
-// MARK: - SAVED WORDS
+// MARK: - Sniglet Dictionary
 "saved.title" = "Dictionary";
 "saved.title.long" = "Your Dictionary";
 "saved.select.prompt" = "No Sniglet Selected";
@@ -30,10 +30,10 @@
 "saved.alert.title" = "Sniglet Added To Dictionary";
 "saved.alert.detail" = "You can go to Dictionary to view the word and add a custom definition.";
 
-// MARK: - SOUND
+// MARK: - Sound
 "sound.button.prompt" = "Speak Sniglet";
 
-// MARK: - SETTINGS
+// MARK: - Settings
 "settings.title" = "Settings";
 "settings.general.title" = "General";
 
@@ -67,7 +67,9 @@
 "settings.syllable.limit" = "This syllable shape is too long and will be trimmed to the first eight characters.";
 "settings.syllable.footer" = "Syllable shapes describe how to place consonants (C) and vowels (V) together. Shapes may repeat to match the length of the word. Common syllable structures cannot be removed.";
 
-// MARK: - IAP UPGRADE
+// MARK: - In-app Purchase Upgrades
+// FIXME: Are these really needed?
+
 "upgrade.title" = "Upgrade to Give Me A Sniglet+";
 "upgrade.subtitle" = "Unlock new features that expand upon the core feature set for a one-time purchase of $0.99.";
 
@@ -83,7 +85,7 @@
 "upgrade.accept" = "Upgrade ($0.99, one-time)";
 "upgrade.cancel" = "Not Now";
 
-// MARK: - CHANGELOG
+// MARK: - Changelog
 "feat.dictionary.title" = "Sniglet Dictionary*";
 "feat.dictionary.detail" = "Save your favorite sniglets into your personal dictionary, synced across all your devices through iCloud.";
 
@@ -99,3 +101,6 @@
 "feat.title" = "What's New in Give Me a Sniglet";
 "feat.accept" = "Continue";
 "feat.prompt" = "*Some features may require an in-app purchase.";
+
+// MARK: - Frugal Warnings
+"frugal.warning.increased_values" = "Increasing this value may take more resources and affect the performance of the app.";
