--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -27,8 +27,8 @@
 "saved.detail.title" = "Dictionary Entry";
 "saved.button.add" = "Save";
 "saved.button.share" = "Share";
-"saved.alert.title" = "Sniglet Added To Dictionary";
-"saved.alert.detail" = "You can go to Dictionary to view the word and add a custom definition.";
+"saved.alert.title" = "Saved";
+"saved.alert.detail" = "Go to Dictionary to add a custom definition.";
 
 // MARK: - Sound
 "sound.button.prompt" = "Speak Sniglet";
