:sparkles: Add option to share sniglet as text
For some devices and scenarios, saving an image version of
a saved sniglet doesn't make sense. In those scenarios,
using text might be preferred.

To allow this, a new setting has been introduced to let the
share sheet share a text snippet of the saved sniglet instead
of an image.

--- a/Shared/en.lproj/Localizable.strings
+++ b/Shared/en.lproj/Localizable.strings
@@ -60,6 +60,10 @@
 
 "settings.reset.title" = "Reset Dialogs and Warnings";
 
+"settings.saved.share_as.title" = "Share Saved As";
+"settings.saved.share_as.image" = "Image (Default)";
+"settings.saved.share_as.text" = "Text";
+
 "settings.syllable.title" = "Syllable Shapes";
 "settings.syllable.add" = "Add";
 "settings.syllable.convert" = "This word will be converted into a syllable shape automatically.";
