--- a/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
+++ b/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
@@ -12,13 +12,28 @@
 "table.note" = "Note";
 
 // MARK: - Generator Actions
-"generator.actions.copy" = "Copy to Clipboard";
-"generator.actions.save" = "Save to Dictionary";
-"generator.actions.speak" = "Speak";
+"generator.actions.copy" = "Copy Selection to Clipboard";
+"generator.actions.save" = "Save Selection to Dictionary";
+"generator.actions.speak" = "Speak Selection";
+"generator.actions.share" = "Share Selection";
 "generator.actions.refresh" = "Generate New Sniglets";
 
 // MARK: - Generator Help Strings
-"generator.help.copy" = "Copy the sniglet to your clipboard.";
-"generator.help.save" = "Save the sniglet to your personal dictionary.";
+"generator.help.copy" = "Copy this sniglet to your clipboard.";
+"generator.help.save" = "Save this sniglet to your personal dictionary.";
 "generator.help.speak" = "Listen to a pronunciation of this sniglet with your device's settings.";
+"generator.help.share" = "Share this sniglet.";
 "generator.help.refresh" = "Generate a new list of sniglets.";
+
+// MARK: - Dictionary Actions
+"dictionary.actions.delete" = "Delete Selected Entry";
+"dictionary.actions.edit" = "Edit Selected Entry";
+"dictionary.actions.share" = "Share Selected Entry";
+
+// MARK: - Dictionary Help Strings
+"dictionary.help.delete" = "Delete the selected sniglet entry from your personal dictionary.";
+"dictionary.help.edit" = "Edit the note for the selected sniglet.";
+"dictionary.help.share" = "Share the selected sniglet and its note.";
+
+// MARK: - Subtitles
+"subtitle.entries" = "subtitle.entries";    // Handled by plural rules
