:lipstick: Replace pickers with new range slider
The range slider is a CompactSlider and works as the original design
had intended.

^ABY-11 work Development 10m

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
+++ b/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
@@ -41,6 +41,7 @@
 "customize.form.words" = "Generate words: ";
 "customize.form.batch-size" = "Generate batches of this size: ";
 "customize.form.syllables" = "Customize Syllables...";
+"customize.form.boundary" = "Generate words in range: ";
 "customize.form.boundary-min" = "Generate words no less than: ";
 "customize.form.boundary-max" = "Generate words no more than: ";
 "customize.form.boundary-lbl" = "%d letters";
