:construction: Minor tweaks

--- a/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
+++ b/Platforms/macOS/Resources/en.lproj/Mac_Localizable.strings
@@ -51,3 +51,6 @@
 
 // MARK: - Feature Availability Texts
 "features.unavailable" = "This feature is not available yet.";
+
+// MARK: - Other UI Texts
+"other.done" = "Done";
